--- a/index.html
+++ b/index.html
@@ -59,10 +59,13 @@
     <div class="container">
       <h1 class="display-4">Bem-vindo à Rádio Bh Hits</h1>
       <p class="lead">Tocando o melhor do funk Bh 24 horas por dia!</p>
-      <audio controls autoplay>
-        <source src="SET DAS PURAS - AS MTG MAIS TOCADAS DE BH 2025.MP3" type="audio/mpeg">
-        Seu navegador não suporta áudio.
-      </audio>
+      <div class="card bg-dark text-white p-3">
+        <h5>Ao Vivo Agora</h5>
+        <audio controls>
+          <source src="SET DAS PURAS - AS MTG MAIS TOCADAS DE BH 2025.MP3" type="audio/mpeg">
+          Seu navegador não suporta áudio.
+        </audio>
+      </div>
     </div>
   </section>
 
